# ciflows

./: .gitignore  core.html  index.html  index.html.md  pyproject.toml  readme.md  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
_proc/: index.ipynb
amlt_example/: example_job_script.py
ciflows/: _modidx.py  core.py  eval.py  glow.py  lightning.py  loss.py  resnet.py  resnet_celeba.py  training.py  unet.py  vae.py  vit.py
ciflows/datasets/: __init__.py  causalceleba.py  causalmnist.py  lightning.py  mnist.py  multidistr.py
ciflows/distributions/: linear.py  multidistr.py  pgm.py  sampling.py  utils.py
ciflows/flows/: __init__.py  freeform.py  glow.py  lightning.py  model.py  quantization.py  unet.py
ciflows/reduction/: better_vae.py  resnetvae.py  vae.py
ciflows/tests/: test_loss.py  test_vae.py  test_vit.py
experiments/: 01_train_model.py
nbs/: index.ipynb  nbdev.yml
notebooks/: 01_injflow_results.ipynb  01_model_results.ipynb  01_toy.ipynb  01_toy_results.ipynb  01_vae_results.ipynb  causal_celeba_vaereduction_results.ipynb  fff_moons.ipynb
notebooks/playground/: causal_prior.ipynb  causalceleba.ipynb  causalmnist.ipynb  inj1x1conv.ipynb  injective_model.ipynb  pretrained_celeba_gan.ipynb
scripts/: 01_train_basic_models.py  01_train_fff_celeba.py  02_train_approx_models.py  submit-python-jobs.sh
scripts/causalfreeformflow/: 01_train_fff_celeba.py  02_train_fff_ddp_celeba.py  submit-python-jobs.sh
scripts/unet/: 01_train_unet.py  (+1 more)
tests/: test_openai_keyless1.py  test_openai_old_key1.py  test_openai_old_key2.py  test_pipeline.py
(+27 files in other folders)
