[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | treeple/_lib
    | .asv
    | env
    | build-install
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 38
extend_skip_glob = ['treeple/__init__.py', 'treeple/_lib/*', '.asv/*', 'env/*', 'build-install/*']

